# eztorch

./: .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml
src/eztorch/: __init__.py  typing.py
src/eztorch/functions/: sigmoid.py  softmax.py
src/eztorch/functions/activations/: __init__.py  leaky_relu.py  relu.py  sigmoid.py  softmax.py  tanh.py
src/eztorch/functions/attention/: __init__.py  scaled_dot_product.py
src/eztorch/functions/losses/: __init__.py  cross_entropy.py  mse.py
src/eztorch/layers/: __init__.py  conv2d.py  dropout.py  embedding.py  layer.py  linear.py  norm.py  pool.py  reshape.py  residual.py  sequential.py
src/eztorch/layers/attention/: __init__.py  self_attention.py
src/eztorch/models/: __init__.py  base.py  default_transformer.py  mlp.py  sequential_model.py
src/eztorch/optim/: __init__.py  adam.py  base.py  sgd.py
src/eztorch/structures/transformer/: __init__.py  decoder.py  encoder.py
src/eztorch/text/: tokenizer.py  vectorizer.py
src/eztorch/utils/: trainer.py
test/: test_mlp.py  test_mlp_classification.py  test_mlp_regression.py  test_nlp.py  utils.py
