[project]
name = "eztorch"
version = "0.1.0"
description = "A compact deep learning framework"
readme = "README.md"
authors = [
    { name = "雨晴", email = "asheovo@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0",
    "tokenizers>=0.22.2",
]

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"

